--- a/public/template/winery_follower_list.html
+++ b/public/template/winery_follower_list.html
@@ -93,38 +93,99 @@
         	<div class="left">
                 <div class="section">
                 	<div class="title">
-                    	<a href="winery_profile.html" class="btn_gray float_r"><span>返回</span></a><a href="#" class="btn_gray float_r mr5"><span>上传照片</span></a>
-           	      <h2>所有照片 <span class="font12 more">(共13张...)</span></h2></div>
+                    	<a href="winery_profile.html" class="btn_gray float_r"><span>返回</span></a>
+                        <h2>所有关注者 <span class="font12 more">(共35人...)</span></h2></div>
                     <div class="content">
-                    <ul class="winery_pic_list">
-                        	<li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_1.jpg" width="130" height="87" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                        </li>
-                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_2.jpg" width="130" height="130" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                      </li>
-                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_3.jpg" width="130" height="87" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                      </li>
-                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_4.jpg" width="130" height="87" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                    </li>
-                      </ul>
-                        <ul class="winery_pic_list">
-                        	<li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_1.jpg" width="130" height="87" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                            </li>
-                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_2.jpg" width="130" height="130" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                            </li>
-                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_3.jpg" width="130" height="87" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                            </li>
-                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_4.jpg" width="130" height="87" alt="blablabla" /></a>
-                                <a class="icon_comment">2</a>
-                            </li>
+                    	<ul class="userlist">
+                        	<li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/05.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <div class="clear"></div>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/09.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <div class="clear"></div>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/07.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/10.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/001.jpg" width="48" height="48" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <div class="clear"></div>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/4.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/3.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="userinfo">
+                                	<div class="username"><a href="#">菠菜</a></div>
+                                    <div class="userlocation">上海</div>
+                                </div>
+                          </li>
+                          <div class="clear"></div>
                         </ul>
-                        <div class="clear"></div>
                     </div>
               </div>
                 <div class="pagination">
