--- a/public/template/winery_profile.html
+++ b/public/template/winery_profile.html
@@ -11,10 +11,12 @@
 	<div id="header">
     <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
-            <div id="top_search">
-           		<input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                <input class="search" name="" type="text" />
-            </div>
+            <form action="search.html">
+                <div id="top_search">
+                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                </div>
+            </form>
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
@@ -46,10 +48,10 @@
                     <div class="mt20">
                     	<ul class="count">
                         	<li class="follow">
-                            	<a>120个关注</a>
-                            </li>
+                            	<a href="winery_follower_list.html">120个关注</a>
+                          </li>
                             <li class="comment">
-                            	<a>45条评论</a>
+                            	<a href="winery_comment_list.html">45条评论</a>
                             </li>
                         </ul>
                         <a href="#" class="btn_gray_b mr5"><span>关注</span></a><a href="#" class="btn_gray_b mr5"><span>评论</span></a>
