--- a/public/template/album_photo_list.html
+++ b/public/template/album_photo_list.html
@@ -11,10 +11,12 @@
 	<div id="header">
     <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
-            <div id="top_search">
-           		<input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                <input class="search" name="" type="text" />
-            </div>
+            <form action="search.html">
+                <div id="top_search">
+                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                </div>
+            </form>
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
@@ -84,6 +86,7 @@
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论 | 2赞</p>
         </li>
+        <div class="clear"></div>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
@@ -108,6 +111,7 @@
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论 | 2赞</p>
         </li>
+        <div class="clear"></div>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
