--- a/public/template/album_photo_upload3.html
+++ b/public/template/album_photo_upload3.html
@@ -11,10 +11,12 @@
 	<div id="header">
     <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
-            <div id="top_search">
-           		<input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                <input class="search" name="" type="text" />
-            </div>
+            <form action="search.html">
+                <div id="top_search">
+                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                </div>
+            </form>
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
@@ -88,6 +90,7 @@
           <p><a href="#" class="icon_delet float_r">删除</a>
             <label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
         </li>
+        <div class="clear"></div>
         <li class="photo_des"> <img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" />
           <p>标题</p>
           <p><input class="text photo_name" name="" type="text" /></p>
@@ -104,6 +107,7 @@
           <p><a href="#" class="icon_delet float_r">删除</a>
             <label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
         </li>
+        <div class="clear"></div>
       </ul>
       <div class="align_c"><a href="album_photo_list.html" class="btn_gray"><span>保存</span></a></div>
       </div>
