--- a/public/template/cellar_people.html
+++ b/public/template/cellar_people.html
@@ -11,10 +11,12 @@
 	<div id="header">
     <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
-            <div id="top_search">
-           		<input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                <input class="search" name="" type="text" />
-            </div>
+            <form action="search.html">
+                <div id="top_search">
+                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                </div>
+            </form>
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
@@ -35,7 +37,7 @@
             <div class="hp_info">
                 <div class="username">不良夏生</div>
                 <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
-                <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
+                <div class="item"><span class="icon_fol mr5">已关注</span><span class="icon_fol_e mr5">互相关注<span class="cancl_fol"> <a href="#">(取消)</a></span></span><a class="icon_mail" href="#">发私信</a></div>
                 <ul class="hp_navi">
                     <li class="current"><a href="cellar.html">12<br/>藏酒</a></li>
                     <li><a href="hp_wine_following.html">12<br/>
