--- a/public/template/cellar_wine_add_search.html
+++ b/public/template/cellar_wine_add_search.html
@@ -11,10 +11,12 @@
 	<div id="header">
     <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
-            <div id="top_search">
-           		<input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                <input class="search" name="" type="text" />
-            </div>
+            <form action="search.html">
+                <div id="top_search">
+                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                </div>
+            </form>
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
