--- a/public/template/winery_photo_detail.html
+++ b/public/template/winery_photo_detail.html
@@ -11,10 +11,12 @@
 	<div id="header">
     <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
-            <div id="top_search">
-           		<input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                <input class="search" name="" type="text" />
-            </div>
+            <form action="search.html">
+                <div id="top_search">
+                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                </div>
+            </form>
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
@@ -171,7 +173,7 @@
               </div>
         	</div>
             <div class="right">
-            	<div class="sidebox">
+           	  <div class="sidebox">
                 	<div class="title"><h3>热门酒款</h3></div>
                     <div class="main">
                     	<ul class="sidewine">
@@ -210,30 +212,6 @@
                                     <h3 class="en"><a href="#">2003 PORTER MILL STATION Cabernet Sauvignon</a></h3>
                             </div>
                           </li>
-                            <div class="clear"></div>
-                        </ul>
-                    </div>
-                </div>
-                <div class="sidebox">
-                	<div class="title"><h3>关注这个酒庄的人<span class="font12 more"><a>(共21人...)</a></span></h3></div>
-                    <div class="main">
-                    	<ul class="follower">
-                        	<li><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></li>
-                            <li><a href="#"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><img src="images/userimage/04.jpg" width="50" height="50" alt="username" /></li>
-                            <li><a href="#"><img src="images/userimage/4.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><a href="#"><img src="images/userimage/07.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></li>
-                            <li><a href="#"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><img src="images/userimage/04.jpg" width="50" height="50" alt="username" /></li>
-                            <li><a href="#"><img src="images/userimage/4.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><a href="#"><img src="images/userimage/07.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></li>
-                            <li><a href="#"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
-                            <li><img src="images/userimage/04.jpg" width="50" height="50" alt="username" /></li>
                             <div class="clear"></div>
                         </ul>
                     </div>
