--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,28 +1,4 @@
 @charset "UTF-8";
-.drop_down_menu {
-    /* border: 1px solid #1C1C1C; */
-    display: none;
-    width: 117px;
-    display: none;
-    position: absolute;
-    z-index: 10000;
-    background: #F5F3F3;
-    top: 42px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 2px 0 2px 2px;
-    padding-left: 10px;
-    opacity: 0.9;
-}
-.header-content ul.user_nav .drop_down_menu li {
-    float: none;
-}
-.drop_down_menu li a {
-    display: block;
-    width: 111px;
-    padding: 5px 10px;
-    text-decoration: none;
-}
 body {font-size:12px; font-family:Arial, Helvetica, sans-serif; color:#333;background:url(../images/bg/body_bg.jpg) repeat;}
 body {line-height:18px;}
 * {margin:0;padding:0;}
@@ -59,7 +35,7 @@ i {color:#ccc;}
 textarea, input, select {font-size:12px;color:#666;font-family:Arial, Helvetica, sans-serif;}
 textarea, input.text {border:1px solid #ccc;background-color:#f9f9f9;}
 textarea, input {padding:5px;}
-input.radio, input.checkbox{border:none;padding:0;margin:0;}
+input.radio, input.checkbox{border:none;padding:0;margin:0;vertical-align: ;}
 input.common_search {width:250px;}
 #top_search {background: none repeat scroll 0 0 #fff;box-shadow:inset 0px 1px 2px #666;border-radius: 30px 30px 30px 30px;height: 30px;overflow: hidden;width: 300px;}
 #top_search input.search_btn {float:right;margin:-3px 0 0 0;}
