--- a/app/views/themes/waterfall/layouts/_user_fragment.html.erb
+++ b/app/views/themes/waterfall/layouts/_user_fragment.html.erb
@@ -1,9 +1,14 @@
 <%  if user_signed_in? %>
-	<ul class="user_nav">
-    <li class="user_center">
-      <%= link_to_user current_user, home_index_path, {:class => "avatar", :with_avatar => true, :avatar_version => :thumb }  %>
-      <%= link_to_icon "arrow_down", "#" %>
-      <ul class="drop_down_menu">
+  <ul>
+    <li class="userbox">
+      <%= link_to_user current_user,
+           home_index_path,
+           {:class => "userpic", :with_avatar => true, :avatar_version => :thumb, :width => 20, :height => 20 }  %>
+      <%= link_to_image "common/userbox_arrow.jpg", "#", {:class => :arrow_down}, :width => 20, :height => 30 %>
+    </li>
+    <li class="top_add">
+      <%= link_to "添加", "#add_data", :class => [:btn_add, :fancybox] %>
+      <ul class="drop_down_menu" >
         <li><%= link_to "设置", basic_settings_path() %></li>
         <li><%= link_to "找朋友", :controller => "/friends", :action => "find" %></li>
         <li><%= link_to "我的Patrick", :controller => "/mine" %></li>
@@ -12,52 +17,52 @@
         <li><%= link_to "登出",  logout_path %></li>
       </ul>
     </li>
- 
-		<li class="top_add">
-			<%= link_to_icon "添加","#add_data", :class => "btn_add fancybox"  %>
-		</li>
   </ul>
 
-	<div style="display:none">
-	  <div id="add_data">
-	    <h3> 添加 </h3>
-	    <div class="text_info"> 请选择你想要添加的内容类型 </div>
-	    <ul>
-	      <li>
-	        <%= link_to_icon "add_detail_comment", {:controller => "/wines", :action => "detail_comment" }  %>
-	        <div class="clear">
+  <div style="display:none">
+    <div id="add_data">
+      <h3> 添加 </h3>
+      <div class="text_info"> 请选择你想要添加的内容类型 </div>
+      <ul>
+        <li>
+          <%= link_to_icon "add_detail_comment", {:controller => "/wines", :action => "detail_comment" }  %>
+          <div class="clear">
 
-	        </div>
-	        <%= link_to "添加品酒辞", :controller => "/wines", :action => "detail_comment" %>
-	      </li>
-	      <li>
-	        <%= link_to_icon "add_simple_comment", {:controller => "/wines", :action => "detail_comment" }  %> <br />
-	        <%= link_to "添加评论", :controller => "/wines", :action => "detail_comment" %>
-	      </li>
-	      <li>
-	        <%= link_to_icon "add_wine", add_mine_wines_path(:step => 1)  %> <br />
-	        <%= link_to "添加红酒", add_mine_wines_path(:step => 1) %>
+          </div>
+          <%= link_to "添加品酒辞", :controller => "/wines", :action => "detail_comment" %>
+        </li>
+        <li>
+          <%= link_to_icon "add_simple_comment", {:controller => "/wines", :action => "detail_comment" }  %> <br />
+          <%= link_to "添加评论", :controller => "/wines", :action => "detail_comment" %>
+        </li>
+        <li>
+          <%= link_to_icon "add_wine", add_mine_wines_path(:step => 1)  %> <br />
+          <%= link_to "添加红酒", add_mine_wines_path(:step => 1) %>
 
-	      </li>
-	      <li>
-	        <%= link_to_icon "add_to_cellar", add_mine_cellar_items_path(current_user.cellar, :step => 1) %> <br />
-	        <%= link_to "添加藏酒", add_mine_cellar_items_path(current_user.cellar, :step => 1) %>
+        </li>
+        <li>
+          <%= link_to_icon "add_to_cellar", add_mine_cellar_items_path(current_user.cellar, :step => 1) %> <br />
+          <%= link_to "添加藏酒", add_mine_cellar_items_path(current_user.cellar, :step => 1) %>
 
-	      </li>
-	      <li>
-	        <%= link_to_icon "add_friends", {:controller => "/friends", :action => "find" }  %> <br />
-	        <%= link_to "添加好友", :controller => "/friends", :action => "find" %>
-	      </li>
-	    </ul>
-	  </div>
-	</div>
-
-
+        </li>
+        <li>
+          <%= link_to_icon "add_friends", {:controller => "/friends", :action => "find" }  %> <br />
+          <%= link_to "添加好友", :controller => "/friends", :action => "find" %>
+        </li>
+      </ul>
+    </div>
+  </div>
 <% else %>
-<ul>
-	<li class="userbox">user</li>
-	<li class="top_add">
-		<%= link_to_icon "添加","#add_data", :class => "btn_add fancybox"  %>
-	</li>
-</ul>
+  <ul>
+    <li>
+      <%= link_to new_user_registration_path, :class => 'btn_green' do  %>
+       <span>注册</span>
+     <% end %>
+    </li>
+    <li>
+     <%= link_to new_user_session_path, :class => 'btn_green' do  %>
+      <span>登陆</span>
+     <% end %>
+    </li>
+  </ul>
 <% end %>
