--- a/app/views/themes/waterfall/mine/cellar_items/add_step_two.html.erb
+++ b/app/views/themes/waterfall/mine/cellar_items/add_step_two.html.erb
@@ -1,6 +1,8 @@
-<div class="mine albums">
-  <%= render "/mine/sub_nav", :action => params[:action] %>
-  <div id="hp">
+<% content_for :css do %>
+	<%= theme_stylesheet_link_tag :hp %>
+	<% end %>
+	<div id="hp">
+	<%= render "mine/sub_nav", :action => params[:action] %>
     <div id="cellar">
       <div class="title_btn">
         <h1>添加藏酒</h1>
