--- a/app/views/themes/waterfall/mine/wines/add_step_one.html.erb
+++ b/app/views/themes/waterfall/mine/wines/add_step_one.html.erb
@@ -7,3 +7,7 @@
       <%= render :partial => "mine/wines/search_wine", :object => @search %>
   </div>
 </div>
+
+<% content_for :css do %>
+<%= theme_stylesheet_link_tag :hp, :add %>
+<% end %>
