--- a/public/template/winery_profile.html
+++ b/public/template/winery_profile.html
@@ -62,27 +62,27 @@
                     <ul class="item">
                     	<li>
                             <p class="pic"><img src="images/icon/winery_photo.gif" width="34" height="26" /></p>
-                            <p><a href="#">照片</a></p>
+                            <p><a href="#01">照片</a></p>
                         </li>
                         <li>
                             <p class="pic"><img src="images/icon/winery_intro.gif" width="26" height="30" /></p>
-                            <p><a href="#">介绍</a></p>
+                            <p><a href="#02">介绍</a></p>
                         </li>
                         <li class="last">
                             <p class="pic"><img src="images/icon/winery_hot.gif" width="32" height="32" /></p>
-                            <p><a href="#">热门就狂</a></p>
+                            <p><a href="#05">热门酒款</a></p>
                         </li>
                         <li>
                             <p class="pic"><img src="images/icon/winery_wine.gif" width="24" height="37" /></p>
-                            <p><a href="#">所有酒款</a></p>
+                            <p><a href="#03">所有酒款</a></p>
                         </li>
                         <li>
                             <p class="pic"><img src="images/icon/winery_comment.gif" width="34" height="31" /></p>
-                            <p><a href="#">评论</a></p>
+                            <p><a href="#04">评论</a></p>
                         </li>
                         <li class="last">
                             <p class="pic"><img src="images/icon/winery_follower.gif" width="31" height="36" /></p>
-                            <p><a href="#">关注者</a></p>
+                            <p><a href="#06">关注者</a></p>
                         </li>
                     </ul>
                 </div>
@@ -92,7 +92,7 @@
         <div class="whitespace winerymain">
         	<div class="left">
        	  		<div class="section">
-                	<div class="title"><h2>照片<span class="font12 more"><a href="winery_photo_list.html">（共12张...）</a></span></h2></div>
+                	<div class="title"><h2><a name="01" id="01"></a>照片<span class="font12 more"><a href="winery_photo_list.html">（共12张...）</a></span></h2></div>
                     <div class="content">
                     	<ul class="winery_pic">
                         	<li><a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_1.jpg" width="130" height="98" alt="blablabla" /></a></li>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="section">
-                	<div class="title"><h2>历史</h2></div>
+                	<div class="title"><h2><a name="02" id="02"></a>历史</h2></div>
                     <div class="content">
                     	<p>百子莲酒庄于1990年由埃斯杜耐尔前任酒庄主人Bruno PRATS先生、玛歌古堡总监Paul PONTALLIER先生、首席法兰西香槟所有人兼运营总监Ghislain de MONTGOLFIER先生及智利最著名的农学与酒类学家Felipe de Solminihac先生共同创建。分布于"迈库峡谷"（Quebrada de Macul）43英亩的葡萄园位于迈波山谷（Maipo Valley）的中心地带，主要种植典型的波尔多葡萄品种，包括加本力苏维翁、卡门及美铎（M閐oc）法定产区古老的葡萄品种...<a href="#">阅读全部</a></p>
                     </div>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="section">
                 	<div class="title">
-                	  <h2>所有酒款 <span class="font12 more"><a href="winery_wine_list.html">(共34支...)</a></span></h2></div>
+               	    <h2><a name="03" id="03"></a>所有酒款 <span class="font12 more"><a href="winery_wine_list.html">(共34支...)</a></span></h2></div>
                     <div class="content">
                     	<ul class="wine_list">
                         	<li class="clearfix">
@@ -199,7 +199,7 @@
                 </div>
                 <div class="section last">
                 	<div class="title"><a href="#" class="btn_gray float_r font12"><span>添加评论</span></a>
-                	<h2>评论 <span class="font12 more"><a href="winery_comment_list.html">(共10条...)</a></span></h2></div>
+               	  <h2><a name="04" id="04"></a>评论 <span class="font12 more"><a href="winery_comment_list.html">(共10条...)</a></span></h2></div>
                     <div class="content">
                     	<ul class="comment_list">
                             <li>
@@ -235,7 +235,7 @@
             </div>
             <div class="right">
             	<div class="sidebox">
-                	<div class="title"><h3>热门酒款</h3></div>
+                	<div class="title"><h3><a name="05" id="05"></a>热门酒款</h3></div>
                     <div class="main">
                     	<ul class="sidewine">
                         	<li>
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="sidebox">
-                	<div class="title"><h3>关注这个酒庄的人<span class="font12 more"><a>(共21人...)</a></span></h3></div>
+                	<div class="title"><h3><a name="06" id="06"></a>关注这个酒庄的人<span class="font12 more"><a href="winery_follower_list.html">(共21人...)</a></span></h3></div>
                     <div class="main">
                     	<ul class="follower">
                         	<li><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></li>
