--- a/public/template/winery_profile.html
+++ b/public/template/winery_profile.html
@@ -198,8 +198,8 @@
                     </div>
                 </div>
                 <div class="section last">
-                	<div class="title"><a href="#" class="btn_gray float_r font12"><span>添加评论</span></a>
-               	  <h2><a name="04" id="04"></a>评论 <span class="font12 more"><a href="winery_comment_list.html">(共10条...)</a></span></h2></div>
+                	<div class="title"><a href="winery_comment_list.html#01" class="btn_gray float_r font12"><span>添加评论</span></a>
+       	      <h2><a name="04" id="04"></a>评论 <span class="font12 more"><a href="winery_comment_list.html">(共10条...)</a></span></h2></div>
                     <div class="content">
                     	<ul class="comment_list">
                             <li>
