--- a/public/template/winery_profile.html
+++ b/public/template/winery_profile.html
@@ -33,7 +33,7 @@
             <div class="winery_header">
                 <div class="cover"><img src="images/test/winery_cover.jpg" width="360" height="320" alt="winery name" /></div>
                 <div class="info">
-                	<div class="float_r"><a href="#" class="icon_sina mr5">新浪微博</a><a href="#" class="icon_tt mr5">twitter</a><a href="#" class="icon_fb">fackbook</a></div>
+                	<div class="float_r"><span class="icon_sina_off mr5">新浪微博</span><a href="#"><span class="icon_tt mr5">twitter</span></a><a href="#"><span class="icon_fb">fackbook</span></a></div>
                     <div class="logo"><img src="images/test/winery_logo2.jpg" width="50" height="50" alt="winery name" /></div>
                     <h1 class="winery_name_ch">奥比安酒庄</h1>
                     <h1 class="winery_name_en">Chateau Haut-Brion</h1>
