--- a/public/template/index.html
+++ b/public/template/index.html
@@ -157,11 +157,14 @@
                 <p class="iw_action">有了新照片</div>
             <div class="iw_main">
             	<ul class="photo">
-                	<li><a href="#"><img src="images/test/wine70.jpg" width="70" height="70" alt="winename" /></a> </li>
-                    <li><a href="#"><img src="images/test/wine70_02.jpg" width="70" height="70" alt="winename" /></a> </li>
-                    <li><a href="#"><img src="images/test/wine70_03.jpg" width="70" height="70" alt="winename" /></a> </li>
+                	<li><a href="#"><img src="images/test/wine70.jpg" width="50" height="50" alt="winename" /></a> </li>
+                    <li><a href="#"><img src="images/test/wine70_02.jpg" width="50" height="50" alt="winename" /></a> </li>
+                    <li><a href="#"><img src="images/test/wine70_03.jpg" width="50" height="50" alt="winename" /></a> </li>
+                    <li><a href="#"><img src="images/test/wine70_02.jpg" width="50" height="50" alt="winename" /></a> </li>
+                    <li><a href="#"><img src="images/test/wine70_03.jpg" width="50" height="50" alt="winename" /></a> </li>
                     <div class="clear"></div>
                 </ul>
+                <div class="clear"></div>
             </div>
             <div class="iw_more"><a href="#">查看更多照片</a></div>
       </div>
@@ -198,12 +201,38 @@
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
-                <p class="iw_action">有了新评论</p>
             </div>
             <div class="iw_main">
             	<p class="content">新鲜美味的酒。果香浓郁，单宁结构良好，余味悠长，伴随着果香与辛辣味。一款令人愉悦的酒。</p>
             </div>
             <div class="iw_more"><a href="#">查看完整品酒辞</a></div>
+      </div>
+      <div class="iw">
+      	<div class="iw_user">
+        	<div class="left"><a href="#"><img src="images/test/user_30.jpg" width="30" height="30" alt="username" /></a></div>
+            <div class="right">
+                <p class="username"><a href="#">我就是秀秀</a></p>
+                <p class="content">发表了评论</p>
+            </div>
+            <div class="clear"></div>
+        </div>
+        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200.jpg" width="200" height="294" /></a></div>
+            <div class="iw_info">
+                <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+                <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
+            </div>
+            <div class="iw_main">
+            	<ul>
+                	<li>
+                    	<div class="left"><a href="#"><img src="images/test/user_30.jpg" width="30" height="30" alt="username" /></a></div>
+                        <div class="right">
+                        	<p class="username"><a href="#">我就是秀秀</a></p>
+                            <p class="content">去年在法国喝到这支酒，老实说并没有传说中的那么...</p>
+                        </div>
+                        <div class="clear"></div>
+                    </li>
+                 </ul>
+            </div>
       </div>
 </div>
 </body>
