--- a/app/views/themes/waterfall/home/index.html.erb
+++ b/app/views/themes/waterfall/home/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :css  do %>
+<%= theme_stylesheet_link_tag :home %>
+<% end %>
+
 <div id="container" style="position: relative; ">
 <%= render "timeline" %>
 <div style="display: none">
@@ -5,7 +9,6 @@
 </div>
 <div class="clear"></div>
 </div>
-
 <script type="text/javascript">
 $('#container').masonry({
 		itemSelector: '.item',
