--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -25,7 +25,11 @@
         <div class="clear"></div>
       </div>
     </div>
-    <div id="wrapper950">
+		<% if params[:controller] == "home"%>
+		 <div id="home">
+		<% else %>
+			 <div id="wrapper950">
+		<% end %>
         <%= yield %>
     </div>
     <%= render "layouts/footer" %>
