--- a/public/template/index.html
+++ b/public/template/index.html
@@ -234,6 +234,22 @@
                  </ul>
             </div>
       </div>
+      <div class="iw">
+      	<div class="iw_user">
+        	<div class="left"><a href="#"><img src="images/test/user_30.jpg" width="30" height="30" alt="username" /></a></div>
+            <div class="right">
+                <p class="username"><a href="#">我就是秀秀</a></p>
+                <p class="content">把它酒加入了酒窖</p>
+            </div>
+            <div class="clear"></div>
+        </div>
+        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200.jpg" width="200" height="294" /></a></div>
+            <div class="iw_info">
+                <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+                <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
+            </div>
+             <div class="iw_more"><a href="#">去看看他的酒窖</a></div>
+      </div>
 </div>
 </body>
 </html>
